--- a/valen.html
+++ b/valen.html
@@ -77,7 +77,7 @@
 
 <body>
     <div class="box">
-        <h1>Heidi My Love💐 <br> Will you be my Valentine?💗</h1>
+        <h1> Will you be my Valentine?💗</h1>
         <button id="yes" title="This will make me happy😍">Yes💕</button>
         <button id="no" title="This will make me depressed☹️">No🥺</button>
     </div>
@@ -116,3 +116,4 @@
     </script>
 </body>
 </html>
+
